@@ -85,7 +85,8 @@ reverse through the file.  File positions are designated by cursors.</p>
 
 <p>This package is implemented using the Berkeley database.  Creating a
 file will also create several auxillary files in the same directory.
-The files in one directory will share the same Berkeley environment.</p>
+The files in one directory will share the same Berkeley environment.
+The relative file paths will be relative to the current working directory.</p>
 
 <p>This package includes two generic types:</p>
 
